# ErasureCodedPIR

./: Dockerfile  README.md
bench/: aws.py  requirements.txt  run_tests.py
scripts/: genCert.sh  gen_console_access.py  gen_pem.sh  install.sh  runClient.sh  runServer.sh  run_docker_end_to_end.sh
src/benchmark/: benchmark.go
src/c/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  c.swigcxx  client.cpp  client.h  cmake_install.cmake  coding.cpp  coding.h  common.h  correctness_tests.cpp  dpf_tree.cpp  dpf_tree.h  ec_base.h  interpolation.cpp  interpolation.h  multiparty_dpf.cpp  multiparty_dpf.h  params.cpp  params.h  server.cpp  server.h  shamir_dpf.cpp  shamir_dpf.h  utils.cpp  utils.h  woodruff.cpp  woodruff.h
src/client/: cd732.go  client.go  hollanti.go  multiparty.go  shamir.go  tree.go  woodruff.go
src/common/: common.go  network.go
src/server/: server.go
src/server_util/: cd732.go  hollanti.go  multiparty.go  shamir.go  tree.go  woodruff.go
